<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tomas.myapplication.TipCalculator" >

    <TextView
        android:id="@+id/billlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="22dp"
        android:text="Check your Bill" />
    <TextView
        android:id="@+id/billTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/billlabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="22dp"
        android:text="@string/bill_text_view" />

    <EditText
        android:id="@+id/billEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billTextView"
        android:layout_alignBottom="@+id/billTextView"
        android:layout_toRightOf="@+id/billTextView"
        android:ems="5"
        android:inputType="numberDecimal"
        android:text="@string/bill_edit_text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_text_view"
        android:layout_alignTop="@+id/billTextView"
        android:layout_toRightOf="@+id/billEditText"
        android:layout_toEndOf="@+id/billEditText"
        android:layout_marginLeft="57dp"
        android:layout_marginStart="57dp" />

    <EditText
        android:id="@+id/tipEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/tip_edit_text"
        android:layout_alignTop="@+id/tipTextView"
        android:layout_toRightOf="@+id/tipTextView"
        android:layout_toEndOf="@+id/tipTextView" />


    <TextView
        android:id="@+id/finalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/finalBillEditText"
        android:layout_below="@+id/tipEditText"
        android:layout_marginTop="22dp"
        android:text="@string/final_text_view" />

    <EditText
        android:id="@+id/finalBillEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:ems="4"
        android:inputType="numberDecimal"
        android:text="@string/final_bill_edit_text"
        android:layout_below="@+id/finalTextView"
        android:layout_alignLeft="@+id/tipEditText"
        android:layout_alignStart="@+id/tipEditText" />


    <TextView
        android:id="@+id/changeTipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/finalTextView"
        android:layout_alignBottom="@+id/finalTextView"
        android:layout_alignLeft="@+id/billTextView"
        android:text="@string/change_tip_text_view" />


    <SeekBar
        android:id="@+id/changeTipSeekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="15"
        android:layout_alignBottom="@+id/finalBillEditText"
        android:layout_alignStart="@+id/changeTipTextView"
        android:layout_toStartOf="@+id/tipTextView" />

</RelativeLayout>

